cmake_minimum_required(VERSION 3.13)
project(C__)

set(CMAKE_CXX_STANDARD 14)

add_executable(C__ main.cpp 面向对象/【1】类和对象/【1】类的成员函数/Box.cpp 面向对象/【1】类和对象/【1】类的成员函数/Box.h 面向对象/【1】类和对象/【1】类的成员函数/Circle.cpp 面向对象/【2】继承/【1】继承/Base.cpp 面向对象/【2】继承/【1】继承/Base.h 面向对象/【3】重载运算符和重载函数/重载函数/PrintData.cpp 面向对象/【3】重载运算符和重载函数/重载函数/PrintData.h 面向对象/【1】类和对象/【2】构造函数和析构函数/Constructor.cpp 面向对象/【1】类和对象/【2】构造函数和析构函数/Constructor.h 面向对象/【1】类和对象/【2】构造函数和析构函数/Line.cpp 面向对象/【1】类和对象/【2】构造函数和析构函数/Line.h 面向对象/【1】类和对象/【3】友元函数/MySelf.cpp 面向对象/【1】类和对象/【3】友元函数/MySelf.h 面向对象/【1】类和对象/【3】友元函数/Friend.cpp 面向对象/【1】类和对象/【3】友元函数/Friend.h 面向对象/【1】类和对象/【4】内联函数/InlineFun.cpp 面向对象/【1】类和对象/【4】内联函数/InlineFun.h 面向对象/【1】类和对象/【5】类的静态成员/StaticBox.cpp 面向对象/【1】类和对象/【5】类的静态成员/StaticBox.h 面向对象/【2】继承/【2】多重继承和虚继承/MultipleInheritance.cpp 面向对象/【2】继承/【2】多重继承和虚继承/VirtualInheritance.cpp 面向对象/【4】多态/Polymorphism.cpp 面向对象/【4】多态/Polymorphism.h 面向对象/【4】多态/静态多态和动态链接/StaticPolymorphismAndDynamicLink.cpp 面向对象/【4】多态/静态多态和动态链接/StaticPolymorphismAndDynamicLink.h)